# OpenHarmony

./: CMakeLists.txt  CrossCompile.cmake  build.sh
EGLWLInputEventExample/: CMakeLists.txt
EGLWLMockNavigation/: CMakeLists.txt
LayerManagerControl/src/: input_commands.cpp
ivi-layermanagement-examples/: CMakeLists.txt
ivi-layermanagement-examples/EGLWLInputEventExample/: CMakeLists.txt
ivi-layermanagement-examples/EGLWLMockNavigation/: CMakeLists.txt
ivi-layermanagement-examples/LayerManagerControl/: CMakeLists.txt
ivi-layermanagement-examples/layer-add-surfaces/: CMakeLists.txt
ivi-layermanagement-examples/multi-touch-viewer/: CMakeLists.txt
ivi-layermanagement-examples/simple-weston-client/: CMakeLists.txt
lib/: libEGL.so.1
multi-touch-viewer/: Android.bak  CMakeLists.txt
multi-touch-viewer/src/: multi-touch-viewer.c
protocol/: CMakeLists.txt  ivi-application-client-protocol.h  ivi-application-protocol.c  ivi-wm.xml
simple-weston-client/: CMakeLists.txt
simple-weston-client/src/: simple-weston-client.c
src/: coin.cpp
